# cc-video

./: .gitignore  README.md  serve.lua  serve.py  test.py
cc-types/: textutils.lua
ccv-encoder/: Cargo.toml  ccv.pyi  pyproject.toml
ccv-encoder/src/: frame.rs  lib.rs  lowres.rs  utils.rs
computer/: ccv-player.lua  ccv.lua  display.lua  displays.lua  log.lua  lualzw.lua  main.lua  player.lua  reader.lua  render.lua  requests.lua  streams.lua  ui.lua  utils.lua
computer/ccv/: audio.lua  init.lua  parse.lua  reader.lua  render.lua  utils.lua
computer/ccv-player/: init.lua  utils.lua
server/: app.py  audio.1.py  audio.py  benchmark.py  ddddd.py  encode.py  pydub_utils.py  requirements.txt  test.prof  test.py  video.py
server/deffcode/: ffdecoder.py  ffhelper.py  sourcer.py
server/modules/: audio.py  create.py  encode.py  measure.py  monitor.py  streams.py  tee.py  video.py  youtube.py
server/modules/encoder/: __init__.py  audio.py  bytes.py  display.py  frame.py  tee.py  video.py
